Добавил модель данных

--- a/Glucose/Glucose/Glucose.csproj
+++ b/Glucose/Glucose/Glucose.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Helpers\SettingsStorageExtensions.cs" />
     <Compile Include="Helpers\TaskExtensions.cs" />
     <Compile Include="Models\DataPoint.cs" />
+    <Compile Include="Models\Glucose.cs" />
+    <Compile Include="Models\MeasurementType.cs" />
     <Compile Include="Models\SampleOrder.cs" />
     <Compile Include="Services\ActivationService.cs" />
     <Compile Include="Activation\DefaultLaunchActivationHandler.cs" />
