--- a/Glucose/Glucose/Glucose.csproj
+++ b/Glucose/Glucose/Glucose.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Services\LiveTileService.Samples.cs" />
     <Compile Include="Services\NavigationServiceEx.cs" />
     <Compile Include="Services\OnBackgroundEnteringEventArgs.cs" />
+    <Compile Include="Services\DataService.cs" />
     <Compile Include="Services\SampleDataService.cs" />
     <Compile Include="Services\SuspendAndResumeService.cs" />
     <Compile Include="Services\SuspensionState.cs" />
