--- a/Glucose/Glucose/Glucose.csproj
+++ b/Glucose/Glucose/Glucose.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Helpers\TaskExtensions.cs" />
     <Compile Include="Models\DataExchange.cs" />
     <Compile Include="Models\DataPoint.cs" />
+    <Compile Include="Models\DataStatus.cs" />
     <Compile Include="Models\Glucose.cs" />
     <Compile Include="Models\MeasureKind.cs" />
     <Compile Include="Models\MeasurementType.cs" />
